--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/main/main.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/main/main.component.html
@@ -1,2 +1,3 @@
 <button routerLink="/login">Login</button>
 <button routerLink="/register">Register</button>
+<button *ngIf="isLogged" routerLink="/user">User</button>
