--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/user/user.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/user/user.component.html
@@ -7,6 +7,6 @@
     <br>
     <br>
     
-    <button (click)="remove()">Remove</button>
+    <button (click)="delete()">Delete</button>
     <button (click)="logout()">Logout</button>
 </div>
