--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/category/category.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/category/category.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div *ngIf="isCompleted">
     <div *ngFor= "let category of categories">
         <p>{{category.name}}</p>
