--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/login/login.component.css
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/login/login.component.css
@@ -1,25 +1,14 @@
 html,
 body {
-  height: 100%;
-}
-
-body {
+  height: 100vh;
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
 }
 
 .form-signin {
-  width: 100%;
   max-width: 330px;
-  padding: 15px;
-  margin: auto;
-}
-
-.form-signin .checkbox {
-  font-weight: 400;
+  padding: 1rem;
 }
 
 .form-signin .form-floating:focus-within {
@@ -32,8 +21,13 @@ body {
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+#submitButton{
+  margin-top: 10px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
