--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/register/register.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/register/register.component.html
@@ -1,27 +1,30 @@
-<div class="text-center">    
-  <main class="form-signin">
-    <form [formGroup]="registerForm">
-      <h1 class="h3 mb-3 fw-normal">Sign up</h1>
-  
+<app-navbar></app-navbar>
+
+<body class="container">
+    <form class="form-signin w-100 m-auto" [formGroup]="registerForm">
+      <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
       <div class="form-floating">
         <input type="email" class="form-control" id="floatingInput" 
         placeholder="name@example.com" formControlName="email">
         <label for="floatingInput">Email address</label>
       </div>
-
       <div class="form-floating">
         <input type="password" class="form-control" id="floatingPassword" 
         placeholder="Password" formControlName="password">
         <label for="floatingPassword">Password</label>
       </div>
-
       <div class="form-floating">
-        <input type="phone" class="form-control" id="phone" 
-        placeholder="5xxxxxxxxx" formControlName="phone" maxlength="10">
+        <input type="phone" class="form-control" id="floatingPhone" 
+        placeholder="Phone" formControlName="phone">
         <label for="phone">Phone</label>
       </div>
 
-      <button class="w-100 btn btn-lg btn-primary" (click)="register()">Sign in</button>
+      <!-- <div class="form-check text-start my-3">
+        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Remember me
+        </label>
+      </div> -->
+      <button id="submitButton" class="btn btn-primary w-100 py-2" type="submit" (click)="register()">Sign in</button>
     </form>
-  </main>
-</div>
+</body>
