--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/user/user.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/user/user.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div *ngIf="isCompleted">
     <h5>id : {{userModel.id}}</h5>
     <h5>email : {{userModel.email}}</h5>
@@ -8,5 +10,4 @@
     <br>
     
     <button (click)="delete()">Delete</button>
-    <button (click)="logout()">Logout</button>
 </div>
