--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/navbar/navbar.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="p-3 text-bg-dark">
+<header class="p-3 text-bg-dark" style="margin-bottom: 20px;">
     <div>
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <!-- <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -26,9 +26,8 @@
               <img src="../../../assets/profilephoto.jpg" width="32" height="32" class="rounded-circle">
             </a>
             <ul class="dropdown-menu text-small">
-              <li><a class="dropdown-item">New project...</a></li>
-              <li><a class="dropdown-item">Settings</a></li>
-              <li><a class="dropdown-item">Profile</a></li>
+              <li><a class="dropdown-item" routerLink="/user">Profile</a></li>
+              <li *ngIf="isAdmin"><a class="dropdown-item text-danger" routerLink="../admin/manage">Admin Panel</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" (click)="logout()">Sign out</a></li>
             </ul>
