--- a/LoginSampleFrontEnd/loginSampleApp/src/app/app.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!-- <app-navbar></app-navbar> -->
 <router-outlet></router-outlet>
+
+<div class="my-overlay" *ngIf="showOverlay">
+    <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>
+  </div>
