--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/category/category.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/category/category.component.html
@@ -2,12 +2,12 @@
 
 <div class="container" style="margin-top: 40px;">
     <h2 *ngFor="let category of categories" style="margin-top: 20px;">
-        <a routerLink="../article" [queryParams]="{category : category.name}" >{{category.name}}</a>
+        <a (click)="routeToCategorizedArticles(category.name)" style="color: blue;text-decoration: underline; cursor: pointer;">{{category.name}}</a>
     </h2>
     <!-- <select #colorList class="form-select" aria-label="Color Name"
      (change)="routeTo('cars/color/' + colorList.value)">
       <option value="" selected disabled hidden>Renk seçiniz</option>
       <option *ngFor="let color of colors" [value]="color.colorId">{{color.colorName}}</option>
     </select>
-    <label for="colorList">Filtrelenecek Renk</label> -->
+    <label for="colorList">Filtrelenecek Renk</label> -->    
 </div>
