--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/login/login.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/login/login.component.html
@@ -2,16 +2,16 @@
 
 <body class="container">
     <form class="form-signin w-100 m-auto" [formGroup]="loginForm">
-      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+      <h1 class="h3 mb-3 fw-normal">Lütfen Giriş Yapınız</h1>
       <div class="form-floating">
         <input type="email" class="form-control" id="floatingInput" 
         placeholder="name@example.com" formControlName="email">
-        <label for="floatingInput">Email address</label>
+        <label for="floatingInput">Email</label>
       </div>
       <div class="form-floating">
         <input type="password" class="form-control" id="floatingPassword" 
         placeholder="Password" formControlName="password">
-        <label for="floatingPassword">Password</label>
+        <label for="floatingPassword">Şifre</label>
       </div>
 
       <!-- <div class="form-check text-start my-3">
@@ -20,6 +20,6 @@
           Remember me
         </label>
       </div> -->
-      <button id="submitButton" class="btn btn-primary w-100 py-2" type="submit" (click)="login()">Sign in</button>
+      <button id="submitButton" class="btn btn-primary w-100 py-2" type="submit" (click)="login()">Giriş Yap</button>
     </form>
 </body>
