--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/register/register.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/register/register.component.html
@@ -2,21 +2,21 @@
 
 <body class="container">
     <form class="form-signin w-100 m-auto" [formGroup]="registerForm">
-      <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
+      <h1 class="h3 mb-3 fw-normal">Lütfen Kayıt Olunuz</h1>
       <div class="form-floating">
         <input type="email" class="form-control" id="floatingInput" 
         placeholder="name@example.com" formControlName="email">
-        <label for="floatingInput">Email address</label>
+        <label for="floatingInput">Email</label>
       </div>
       <div class="form-floating">
         <input type="password" class="form-control" id="floatingPassword" 
         placeholder="Password" formControlName="password">
-        <label for="floatingPassword">Password</label>
+        <label for="floatingPassword">Şifre</label>
       </div>
       <div class="form-floating">
         <input type="phone" class="form-control" id="floatingPhone" 
         placeholder="Phone" formControlName="phone">
-        <label for="phone">Phone</label>
+        <label for="phone">Telefon</label>
       </div>
 
       <!-- <div class="form-check text-start my-3">
@@ -25,6 +25,6 @@
           Remember me
         </label>
       </div> -->
-      <button id="submitButton" class="btn btn-primary w-100 py-2" type="submit" (click)="register()">Sign in</button>
+      <button id="submitButton" class="btn btn-primary w-100 py-2" type="submit" (click)="register()">Kayıt Ol</button>
     </form>
 </body>
