--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/article-management/article-manage/article-management.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/article-management/article-manage/article-management.component.html
@@ -3,7 +3,7 @@
 <html>
 
 <body>
-    <div *ngIf="!isCreateActive && !isUpdateActive" class="container">
+    <div class="container">
         <div class="position-absolute top-20 end-0" style="margin-right: 40px;">
             <button type="button" class="btn btn-success" (click)="routeCreate()">Yeni Makale Oluştur</button>
         </div>
@@ -25,41 +25,17 @@
                     </div>
                     <div class="col-4" id="modifyButtonsDiv">
                         <button (click)="activeDeletePanel(article.id)" id="modifyButtons" class="btn btn-danger"><img src="https://img.icons8.com/ios/25/delete-trash.png"></button>
-                        <button (click)="routeUpdate(article)" id="modifyButtons" class="btn btn-info"><img src="https://img.icons8.com/pastel-glyph/25/loop.png"></button>
+                        <button (click)="routeUpdate(article.id)" id="modifyButtons" class="btn btn-info"><img src="https://img.icons8.com/pastel-glyph/25/loop.png"></button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <!-- Create New Article -->
-    <div *ngIf="isCreateActive" class="container position-relative">
-        <form class="form" [formGroup]="articleCreateForm">
-            <h1 class="h3 mb-3 fw-normal">Yeni Makale Oluştur</h1>
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="floatingInput" 
-              formControlName="title">
-              <label for="floatingInput">Başlık</label>
-            </div>
-            <div class="form-floating"> 
-              <textarea type="text" placeholder="İçerik" id="floatingInput" 
-              formControlName="content" rows="15" cols="150"></textarea>
-            </div>
-            <h4>Kategorileri Seçiniz</h4>
-            <div *ngFor="let category of categories">
-                <input type="checkbox" name="{{category.name}}" value="{{category.name}}" id="{{category.name}}" class="m-2">
-                <label for="{{category.name}}">{{category.name}}</label><br>
-            </div>
-      
-            <button id="submitButton" class="btn btn-primary position-absolute bottom-0 end-0" type="submit" (click)="createArticle()">Oluştur</button>
-          </form>
-    </div>
-
+    
     <!-- Update Selected Article -->
-    <div *ngIf="isUpdateActive" class="container">
-
-    </div>
+    <!-- <div *ngIf="isUpdateActive" class="container">
+        
+    </div> -->
 </body>
 
 </html>
