--- a/LoginSampleFrontEnd/loginSampleApp/src/app/components/navbar/navbar.component.html
+++ b/LoginSampleFrontEnd/loginSampleApp/src/app/components/navbar/navbar.component.html
@@ -26,6 +26,7 @@
             </a>
             <ul class="dropdown-menu text-small">
               <li><a class="dropdown-item" routerLink="/user">Profilim</a></li>
+              <li *ngIf="isWriter || isAdmin"><a class="dropdown-item text-danger" routerLink="/articles/manage">Yazılarım</a></li>
               <li *ngIf="isAdmin"><a class="dropdown-item text-danger" routerLink="../admin/manage">Admin Paneli</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" (click)="logout()">Çıkış Yap</a></li>
